crates/aranya-policy-compiler/tests/data/commands/attributes_fn_call_invalid_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
3 |     attributes { i: f() }
  |                     ^^^ This expression is not valid in a const context
